kube-prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dp-limesurvey-service
  name: dp-limesurvey-service
spec:
  ports:
  - name: https
    port: 10443
    targetPort: 10443
  selector:
    name: dp-limesurvey
